# DemuxHMM

./: .gitignore  README.md  pyproject.toml
demuxHMM/: __init__.py  demuxHMM.py
paper/: PBMC_HMM.py  README.md  ari_v_generations_fig.py  comparison_demuxHMM.sh  comparison_demuxHMM_2500.sh  comparison_demuxHMM_high_emb.sh  comparison_fig.py  comparison_scsplit.sh  comparison_scsplit_2500.sh  comparison_sorc3.sh  comparison_vireo.sh  data_simulator.py  downsampling_fig.py  downsampling_sweep.sh  fly_variant_to_gene_mapping_fly_atlas.py  generate_datasets.sh  generate_datasets_2500.sh  generate_datasets_generations.sh  generate_transitions.sh  generations_sweep.sh  get_datasets.sh  grid_fig.py  grid_sweep.sh  high_emb_stats.py  lv_urchin_ari_analysis.py  run_comparison_sweep.sh  simulate_fly_breeding.py  simulation_utils.py
paper/PBMC pre-processing/: README.md  cellranger.sh  cellsnp.sh  combine_cellsnp_calls.py  extract_barcodes.py  split_vcf.sh  subset_bam.py
