[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demuxHMM"
version = "0.1.0"
description = "A Hidden Markov Model based demultiplexing method for scRNA-seq data and other omics."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numba",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
paper = [
    "numpy",
    "pandas",
    "scikit-learn",
    "pysam",
    "anndata",
    "vireoSNP",
    "pandarallel"
]

[tool.setuptools]
packages = ["demuxHMM"]